cabal-version:      >= 1.18
build-type:         Simple
name:               weeder
version:            0.1.11
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2017
synopsis:           Detect dead code
description:
    Find redundant package dependencies or redundant module exports.
homepage:           https://github.com/ndmitchell/weeder#readme
bug-reports:        https://github.com/ndmitchell/weeder/issues
extra-doc-files:
    README.md
    CHANGES.txt
tested-with:        GHC==8.2.1, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4

source-repository head
    type:     git
    location: https://github.com/ndmitchell/weeder.git

executable weeder
    default-language:   Haskell2010
    main-is:            Main.hs
    hs-source-dirs:     src
    if impl(ghc < 8.0)
        build-depends: semigroups >= 0.18
    build-depends:
        base >= 4.6 && < 5,
        text,
        unordered-containers,
        yaml,
        vector,
        hashable,
        directory,
        deepseq,
        filepath,
        cmdargs,
        aeson,
        yaml,
        bytestring,
        foundation >= 0.0.10,
        process >= 1.2.3.0,
        extra
    other-modules:
        Cabal
        Hi
        Stack
        Util
        Check
        Warning
        CmdLine
        Str
        Paths_weeder
