name:                baz
version:             0.1.0.0
license:             PublicDomain
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >= 1.10

executable baz
  main-is:             Main.hs
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
