cabal-version:      >= 1.18
build-type:         Simple
name:               foo
version:            0

library
    default-language:   Haskell2010
    hs-source-dirs:     src 
    build-depends:      base, cmdargs, process, extra
    exposed-modules:
        Library1
        Dir.Library2
    other-modules:
        Dir.Everything
        Dir.Reexport
        Dir.Unused
        Dir.Reuse

executable foo
    default-language:   Haskell2010
    build-depends:      base, foo, process
    main-is:            src/Main.hs
