cabal-version:      >= 2.0
build-type:         Simple
name:               foo
version:            0

library
    default-language:   Haskell2010
    hs-source-dirs:     src
    build-depends:      base ^>= 4.12, cmdargs > 0.0, process < 1000, extra -any, array (> 0) || (> 0.0 && < 10000), template-haskell
    build-tools:        alex
    exposed-modules:
        Library1
        Dir.Library2
    other-modules:
        Lexer
        Dir.CoerceType
        Dir.CoerceValue
        Dir.Everything
        Dir.Orphan
        Dir.Reexport
        Dir.Unused
        Dir.TypesOnly
        Dir.QuasiQuoter
        Dir.Reuse

executable foo
    default-language:   Haskell2010
    build-depends:      base, foo, process, array
    main-is:            src/Main.hs
