cabal-version:       2.2
name:                two
version:             0

common same
  build-depends:      base >=4.11 && <4.13, text
  default-language:   Haskell2010

library
  import:             same
  exposed-modules:    Common
  other-modules:      Impl
  hs-source-dirs:     src

library cli
  import:             same
  build-depends:      two, cmdargs > 0.0, data-default
  exposed-modules:    CLI
  hs-source-dirs:     cli

executable two
  import:             same
  main-is:            Main.hs
  hs-source-dirs:     app
  build-depends:      two, cli
